// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PayoutPreferencesPage matches snapshot with Stripe connected 1`] = `
<Page
  scrollingDisabled={false}
  title="PayoutPreferencesPage.title"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        currentPage="PayoutPreferencesPage"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="PayoutPreferencesPage"
      />
    </LayoutWrapperTopbar>
    <LayoutWrapperSideNav
      className={null}
      rootClassName={null}
      tabs={
        Array [
          Object {
            "linkProps": Object {
              "name": "ContactDetailsPage",
            },
            "selected": false,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.contactDetailsTabTitle"
              values={Object {}}
        />,
          },
          Object {
            "linkProps": Object {
              "name": "PasswordChangePage",
            },
            "selected": false,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.passwordTabTitle"
              values={Object {}}
        />,
          },
          Object {
            "linkProps": Object {
              "name": "PayoutPreferencesPage",
            },
            "selected": true,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.paymentsTabTitle"
              values={Object {}}
        />,
          },
        ]
      }
    />
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <h1>
          <FormattedMessage
            id="PayoutPreferencesPage.heading"
            values={Object {}}
          />
        </h1>
        <p>
          <FormattedMessage
            id="PayoutPreferencesPage.stripeAlreadyConnected"
            values={Object {}}
          />
        </p>
      </div>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <InjectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;

exports[`PayoutPreferencesPage matches snapshot with Stripe not connected 1`] = `
<Page
  scrollingDisabled={false}
  title="PayoutPreferencesPage.title"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        currentPage="PayoutPreferencesPage"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="PayoutPreferencesPage"
      />
    </LayoutWrapperTopbar>
    <LayoutWrapperSideNav
      className={null}
      rootClassName={null}
      tabs={
        Array [
          Object {
            "linkProps": Object {
              "name": "ContactDetailsPage",
            },
            "selected": false,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.contactDetailsTabTitle"
              values={Object {}}
        />,
          },
          Object {
            "linkProps": Object {
              "name": "PasswordChangePage",
            },
            "selected": false,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.passwordTabTitle"
              values={Object {}}
        />,
          },
          Object {
            "linkProps": Object {
              "name": "PayoutPreferencesPage",
            },
            "selected": true,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.paymentsTabTitle"
              values={Object {}}
        />,
          },
        ]
      }
    />
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <h1>
          <FormattedMessage
            id="PayoutPreferencesPage.heading"
            values={Object {}}
          />
        </h1>
        <p>
          <FormattedMessage
            id="PayoutPreferencesPage.stripeNotConnected"
            values={Object {}}
          />
        </p>
        <InjectIntl(PayoutDetailsFormComponent)
          createStripeAccountError={null}
          disabled={false}
          inProgress={false}
          onChange={[Function]}
          onSubmit={[Function]}
          ready={false}
          submitButtonText="PayoutPreferencesPage.submitButtonText"
        />
      </div>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <InjectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;

exports[`PayoutPreferencesPage matches snapshot with details submitted 1`] = `
<Page
  scrollingDisabled={false}
  title="PayoutPreferencesPage.title"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        currentPage="PayoutPreferencesPage"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="PayoutPreferencesPage"
      />
    </LayoutWrapperTopbar>
    <LayoutWrapperSideNav
      className={null}
      rootClassName={null}
      tabs={
        Array [
          Object {
            "linkProps": Object {
              "name": "ContactDetailsPage",
            },
            "selected": false,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.contactDetailsTabTitle"
              values={Object {}}
        />,
          },
          Object {
            "linkProps": Object {
              "name": "PasswordChangePage",
            },
            "selected": false,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.passwordTabTitle"
              values={Object {}}
        />,
          },
          Object {
            "linkProps": Object {
              "name": "PayoutPreferencesPage",
            },
            "selected": true,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.paymentsTabTitle"
              values={Object {}}
        />,
          },
        ]
      }
    />
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <h1>
          <FormattedMessage
            id="PayoutPreferencesPage.heading"
            values={Object {}}
          />
        </h1>
        <p>
          <FormattedMessage
            id="PayoutPreferencesPage.payoutDetailsSaved"
            values={Object {}}
          />
        </p>
        <InjectIntl(PayoutDetailsFormComponent)
          createStripeAccountError={null}
          disabled={true}
          inProgress={false}
          onChange={[Function]}
          onSubmit={[Function]}
          ready={true}
          submitButtonText="PayoutPreferencesPage.submitButtonText"
        />
      </div>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <InjectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;
